<resources>
    <string name="app_name">أجزاخانتي</string>
    <string name="login_userName">البريد الالكتروني</string>
    <string name="login_password">كلمة المرور</string>
    <string name="enter">دخول</string>
    <string name="forgetPass">فقدت كلمة المرور ؟</string>
    <string name="fbLogin">دخول عن طريق الفيسبوك</string>
    <string name="gLogin">دخول عن طريق جوجل بلس</string>
    <string name="register">حساب جديد</string>
    <string name="registerFromLogin">ليس لديك حساب؟ سجل الان!</string>
    <string name="userNameError">يجب إدخال اسم المستخدم</string>
    <string name="passError">يجب إدخال كلمة مرور</string>
    <string name="emailError">يجب إدخال البريد الإلكتروني</string>
    <string name="sending">جاري تحميل البيانات</string>
    <string name="phoneError">يجب إدخال رقم الهاتف</string>
    <string name="dobError">يجب إدخال تاريخ الميلاد</string>
    <string name="serverFailureMsg">حدث خطأ في الإتصال..تأكد من اتصالك بالإنترنت</string>
    <string name="adItemFailure">لم يتم تحميل كافة بيانات الإعلان..من فضلك أعد المحاولة مرة أخرى</string>
    <string name="facebook_app_id">1684091538289902</string>
    <string name="splashMsg">اوصل لمئات الأدوية وتواصل مع الصيدليات عن طريق تطبيق أجزاخانتي</string>
    <string name="splashLoginButtonText">تسجيل الدخول</string>
    <string name="splashRegisterButtonText">حساب جديد</string>
    <string name="loginLabel">تسجيل الدخول</string>
    <string name="updatingMeasuresSuccess">تم تحديث القياس بنجاح</string>
    <string name="sendingMeasuresSuccess">تم حفظ القياس بنجاح</string>
    <string name="loginUsingLabel">دخول بواسطة</string>
    <string name="preRegisterWelcomMsg">سيعمل فريق عمل اجزاخانتي على تقديم آفضل الخدمات للتمتع بتحربة طبيه متميزة.\n\n شكراً لتسجيلك</string>
    <string name="preRegisterExplanationMsg">قبل البدء في عملية التسجيل دعنا نقوم بإضافة صورة شخصية!</string>
    <string name="preRegisterSelectImageButtonText">أضف صورة</string>
    <string name="preRegisterSelectNextButtonText">التالي</string>
    <string name="preRegisterSelectSkipButtonText">تخطي الصورة</string>
    <string name="registerButtonText">تسجيل</string>
    <string name="postRegistrationExplanationText">شكراً لتسجيلك\n أضف الآن اهتماماتك وصيدلياتك المفضلة</string>
    <string name="postRegisterSelectSkipButtonText">تخطي الآن</string>
    <string name="regiterTitle">انشاء حساب</string>
    <string name="addressTitle">العنوان</string>
    <string name="gov">المحافظة</string>
    <string name="city">المدينة</string>
    <string name="detailedAdd">العنوان تفصيليا</string>
    <string name="selectGovPrompt">اختر المحافظة</string>
    <string name="selectCityPrompt">اختر المدينة</string>
    <string name="changePass">تغيير كلمة المرور</string>
    <string name="terms">شروط الاستخدام</string>
    <string name="userName">الاسم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="phone">رقم التليفون</string>
    <string name="birthDate">تاريخ الميلاد</string>
    <string name="gender">الجنس</string>
    <string name="radio_male">ذكر</string>
    <string name="radio_female">أنثى</string>
    <string name="settings">إعدادات الحساب</string>
    <string name="skip">تخطي</string>
    <string name="finish">إنهاء</string>
    <string name="fav">صيدليتك المفضلة</string>
    <string name="noFav">لا توجد صيدلية مفضلة حتى الآن!</string>
    <string name="searchBy">ابحث بواسطة</string>
    <string name="imageFrom">اختر صورة من:</string>
    <string name="gallery">معرض الصور</string>
    <string name="cameraC">الكاميرا</string>
    <string name="pharmData">بيانات واسم الصيدلية</string>
    <string name="surrounding">الصيدليات المحيطة</string>
    <string name="searchPharmacy">ابحث عن صيدلية</string>
    <string name="circleSearchPharmacy">ابحث عن صيدليات في منطقتك</string>
    <string name="list">قائمة</string>
    <string name="map">خريطة</string>
    <string name="searchPharmacyByName">بحث الصيدليات</string>
    <string name="surroundingPharms">الصيدليات المحيطة</string>
    <string name="search">ابحث</string>
    <string name="enterPharmName">ادخل اسم الصيدلية</string>
    <string name="address">عنوانك</string>
    <string name="save">حفظ (التالي)</string>
    <string name="interests">الإهتمامات</string>
    <string name="zegoOffers">سيتم تنبيهك بعروض الصيدليات بناء على اهتماماتك</string>
    <string name="username">أحمد مصطفى</string>
    <string name="interestsDone">تم إنشاء/تعديل حسابك بنجاح!\n\n سيعمل فريق عمل اجزخانتي على تقديم آفضل الخدمات الطبيه للتمتع بتحربة طبيه متميزة. شكراً لتسجيلك.</string>
    <string name="zegoAddressSelection">تسجيل العنوان والموقع يسهل عليك التعرف على الصيدليات المحيطة وتقدير زمن وصول الاوردر وايضا اعلامك باى عروض جديدة في محيطك</string>
    <string name="zegoWelcome">مرحبا انا زيجو\n\n مساعدك الشخصي في التطبيق ساحاول مساعدتك للاستخدام الامثل للتطبيق فقط اتبعنى في الخطوات القادمة :-)</string>
    <string name="passLenghtError">كلمة السر يجب أن تحتوي على أكثر من 6 خانات</string>
    <string name="validEmailError">بريد إلكتروني غير صحيح</string>
    <string name="validPhoneError">رقم هاتف غير صحيح</string>
    <string name="selectPic2">اختر الصورة</string>
    <string name="searchError">ٍيجب إدخال اسم الصيدلية</string>
    <string name="termsText">شروط وأحكام استخدام تطبيق آجزخانتي: تتغير شروط الاستخدام من حين لآخر، وفي حالة إجراء مثل هذه التغييرات، سيعرض تطبيق آجزخانتي إخطارات لكي يكون المُستخدِم على علم بها. استمرار المُستخدِم في استعمال الموقع/ تطبيق آجزخانتي قائم على قبول شروط وأحكام الاستخدام هذه، حسب ما يجري تعديلها من وقت لآخر من أجل خدمة أفضل و جودة أعلى. أي مخالفة لهذه الاتفاقية من قبل العميل / المشترك قد تعرض حسابه للإيقاف بدون إشعار مسبق .</string>
    <string name="apiStatusFalseMsg">لم يتم تنفيذ طلبك..حاول مرة أخرى</string>
    <string name="updated">تم تعيين صيدليتك المفضلة بنجاح</string>
    <string name="emailExists">هذا البريد الإلكتروني تم تسجيله من قبل</string>
    <string name="wrongCode">حدث خطأ ما..ربما تكون قد هذه الصيدلية موجودة في دائرتك بالفعل أو ربما قد تكون أدخلت كود صيدلية خاطئ</string>
    <string name="loginMsg">جاري تسجيل الدخول..</string>
    <string name="invalidLogin">بريد إلكتروني أو كلمة مرور غير صحيحة</string>
    <string name="externalLoginNotFound">من فضلك قم بملئ البيانات التالية ثم اضغط تسجيل حتى يتم ربط حساب الفيسبوك الخاص بك بحساب أجزاخانتي</string>
    <string name="registerMsg">جاري تسجيل بيانات حسابك..</string>
    <string name="noImg">يجب اختيار صورة أولا</string>
    <string name="nav_orders">الأوردرات</string>
    <string name="nav_offers">العروض</string>
    <string name="nav_consultations">الاستشارات</string>
    <string name="nav_measurements">القياسات</string>
    <string name="nav_my_circle">إدارة دائرتي</string>
    <string name="nav_reminders">إدارة التنبيهات</string>
    <string name="nav_violation">أبلغ عن مخالفة</string>
    <string name="nav_instructions">الإرشادات</string>
    <string name="nav_settings">الإعدادات</string>
    <string name="signOut_settings">تسجيل الخروج</string>
    <string name="editData_settings">تعديل البيانات</string>
    <string name="myOrdersTitle">أوردراتي</string>
    <string name="searchOrders">ابحث بالصيدلية او بالاوردر</string>
    <string name="searchAds">ابحث بالصيدلية او بالصنف</string>
    <string name="active">نشطة</string>
    <string name="inactive">غير نشطة</string>
    <string name="preparing">جاري الاعداد</string>
    <string name="newOrder">أوردر جديد</string>
    <string name="nearby">جاري البحث عن صيدليات قريبة منك</string>
    <string name="noNearby">لا يوجد أي صيدلية قريبة منك حاليا</string>
    <string name="updating">جاري تحديث صيدليتك المفضلة..</string>
    <string name="detecting">جاري تحديد موقعك..</string>
    <string name="itemsSelection">اختيار الأصناف</string>
    <string name="byPhoto">تصوير روشته</string>
    <string name="reOrder">تكرار طلب</string>
    <string name="delivery">توصيل منزلي</string>
    <string name="delivery2">استلام من الصيدليه</string>
    <string name="sendOrder">طلب اوردر</string>
    <string name="noCircle">لاتوجد صيدليات في دائرتك</string>
    <string name="noOrders">لايوجد أوردرات</string>
    <string name="orderNum">طلب رقم:</string>
    <string name="orderProd">إجمالي المنتجات:</string>
    <string name="orderDate">التاريخ:</string>
    <string name="noSearch">لم يتم العثور على أي صيدلية</string>
    <string name="adExpiry">ينتهي:</string>
    <string name="adExpiryDtl">ينتهي في:</string>
    <string name="adExpiryDtl2">أيام</string>
    <string name="adExpiryDtl3">منتهي</string>
    <string name="adExpiryDtl4">يوم</string>
    <string name="egp">جنيه مصري</string>
    <string name="name">الاسم</string>
    <string name="code">الكود</string>
    <string name="phoneCircle">التليفون</string>
    <string name="nameHint">ادخل اسم الصيدلية</string>
    <string name="codeHint">ادخل كود الصيدلية</string>
    <string name="phoneCircleHint">ادخل تليفون الصيدلية</string>
    <string name="circles">دائرتي</string>
    <string name="addToCircles">أضف إلى دوائري</string>
    <string name="call">اتصل</string>
    <string name="ads">اعلانات الصيدليات</string>
    <string name="ignore">إخفاء</string>
    <string name="expireWithin">ينتهي في: ٧ أيام</string>
    <string name="desc">الوصف:</string>
    <string name="cats">الفئات:</string>
    <string name="cart">اطلب المنتج</string>
    <string name="rates">تقييم المستخدمين</string>
    <string name="writeReview">اكتب تقييم</string>
    <string name="writeReview2">كتابة تقييم</string>
    <string name="writeReview3">تقييم المنتج:</string>
    <string name="writeReview4">تقييمك</string>
    <string name="send">أرسل</string>
    <string name="totalOrders">اجمالي الطلبات:</string>
    <string name="totalOrdersValue">0 طلب</string>
    <string name="lastMeasure">اخر قياس:</string>
    <string name="lastMeasureValue">لا يوجد</string>
    <string name="orderStatus">حالة الطلب</string>
    <string name="remaining">متبقي</string>
    <string name="remaining2">دقيقة</string>
    <string name="preparingOrder">قيد التحضير</string>
    <string name="deliveringOrder">جاهز / في الطريق</string>
    <string name="deliveredOrder">تم التسليم</string>
    <string name="deletedOrder">تم الإلغاء</string>
    <string name="offers">عروض وتخفيضات</string>
    <string name="activeOffersNumber">اعلان نشط</string>
    <string name="allOffers">شاهد جميع العروض</string>
    <string name="newOrderMenu">عمل اوردر</string>
    <string name="twentyfourseven">24/7</string>
    <string name="newOffer">صفقة جديدة</string>
    <string name="newReminder">تذكير جديد</string>
    <string name="newMeasurement">قياس جديد</string>
    <string name="newConsultation">استشاره الصيدلي</string>
    <string name="addToCircle">أضف إلى دئرتك</string>
    <string name="noFavP">لا يوجد صيدلية مفضلة.\n\nاضغط إضافة لتحديد صيدلية</string>
    <string name="addPcyCircle">جاري إضافة الصيدلية إلى دائرتك</string>
    <string name="addP">إضافة</string>
    <string name="done">تم</string>
    <string name="activeCircle">(نشط)</string>
    <string name="inactiveCircle">(غير نشط)</string>
    <string name="noPharmInCircle">لا يوجد صيدليات</string>
    <string name="ad">لوشن ترطيب وللحماية من أشعة الشمس بمعامل حماية 50 من نيفيا، 200 مل</string>
    <string name="reviewRequired">يجب إدخال تعليق أولا</string>
    <string name="addToCirclesDone">تم اضافه الصيدلية الى دائرتك</string>
    <string name="tempFacPharm">صيدليتك المفضلة\nصيدلية سيف\n ٤٨ عباس العقاد, مدينة نصر</string>
    <string name="yourFavPcy">صيدليتك المفضلة</string>
    <string name="edit">تعديل</string>
    <string name="addItem">اضف صنف</string>
    <string name="noItems">لم يتم إضافة أي صنف بعد</string>
    <string name="comment">التعليق</string>
    <string name="total">الإجمالي:</string>
    <string name="searchItems">أدخل اسم الصنف</string>
    <string name="ar">عربي</string>
    <string name="en">انجليزي</string>
    <string name="pcyCode">كود الصيدلية</string>
    <string name="sendInvitation">ادخل كود الصيدلية المفضلة مباشرة</string>
</resources>