<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_below="@id/radioGroup"
        android:focusable="true"
        android:focusableInTouchMode="true" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/searchItems"
        android:inputType="text"
        android:textColor="#C0C0C0"
        android:textColorHint="#C0C0C0"
        android:textSize="14sp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/searchET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="17dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch"
            android:drawableEnd="@drawable/ic_search_green_24px"
            android:drawablePadding="5dp"

            android:theme="@style/MyEditTextTheme2" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchLayout"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"

        >

        <RadioButton
            android:id="@+id/ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:checked="true"
            android:text="@string/ar"
            android:textColor="#000000"
            android:textSize="14sp" />


        <RadioButton
            android:id="@+id/en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/en"
            android:textColor="#000000"
            android:textSize="14sp" />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_horizontal"
        android:text="@string/noSearch"
        android:textSize="14sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="17dp"

        android:visibility="invisible">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:weightSum="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_rounded_button"
            android:text="@string/search"
            android:layout_weight=".5"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_rounded_button_white_green"
            android:text="@string/done"
            android:layout_weight=".5"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>