<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingBottom="18dp"
                android:paddingTop="18dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/regTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:gravity="start"
                        android:text="@string/searchPharmacyByName"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/doneButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:gravity="start"
                        android:text="@string/done"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />


                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:layout_above="@+id/searchButton">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_marginTop="16dp"
            android:layout_marginStart="11dp"

            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:text="@string/name"
                android:textColor="#000000"
                android:checked="true"
                android:textSize="14sp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/code"
                android:text="@string/code"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:text="@string/phoneCircle"
                android:textColor="#000000"
                android:textSize="14sp"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:layout_below="@id/radioGroup"
            android:focusable="true"
            android:focusableInTouchMode="true" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/searchET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioGroup"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="17dp"
                android:drawableEnd="@drawable/ic_search_green_24px"
                android:drawablePadding="5dp"
                android:hint="@string/nameHint"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:textColor="#C0C0C0"
                android:textColorHint="#C0C0C0"
                android:textSize="14sp"
                android:maxLines="1"
                android:theme="@style/MyEditTextTheme2" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/noNearby"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:text="@string/noSearch"
            android:gravity="center_horizontal"
            android:visibility="gone"
            />

        <ListView
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchET"
            android:layout_marginTop="17dp"
            android:visibility="invisible">

        </ListView>
        </RelativeLayout>
    </ScrollView>
        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/layout_rounded_button"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>
