<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#459283"
    tools:context="com.android.agzakhanty.views.ZegoWelcomePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:theme="@style/CustomActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="18dp">

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/skip"
                    android:layout_gravity="end"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/postRegisterUserName"
            android:layout_below="@id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/zegoWelcome"
            android:textColor="@android:color/white"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:textSize="18sp" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zego"
            android:background="@drawable/zego_defualt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/postRegisterUserName"/>


        <Button
            android:id="@+id/registerNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zego"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/layout_rounded_button"
            android:text="@string/preRegisterSelectNextButtonText"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            />


    </RelativeLayout>

</ScrollView>
